[package]
name = "rp-pico-template"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.0", features = [ "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0",  features = ["defmt"] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embedded-nrf24l01 = {version = "0.2.0", git = "https://github.com/astro/embedded-nrf24l01" }

[profile.release]
debug = true
